--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,113 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="2000"
+    android:viewportHeight="2000">
+  <group android:scaleX="1.31"
+      android:scaleY="1.31"
+      android:translateX="-310"
+      android:translateY="-310">
+    <path
+        android:pathData="m1335.9,1309.2c-29,-68.2 -58,-136.3 -87.1,-204.4 -52.1,-122.5 -104.3,-245 -156.3,-367.5 -11.2,-26.4 -29.7,-45.5 -56.5,-55.9 -51.1,-19.8 -105.9,4.1 -128.1,56.1 -74.4,174.5 -148.6,349.1 -222.9,523.7 -8.9,20.8 -17.7,41.6 -27.3,64.2h123.9q20.9,0 28.9,-19.2c39.2,-94.3 140.5,-145.3 238.9,-119 68.3,18.2 114.5,61.9 139.9,127.6 3.1,7.9 6.9,11 15.8,10.8 42,-0.6 84,-0.2 125.9,-0.3 3.3,-0 6.6,-0.4 10.9,-0.6 -2.4,-5.9 -4.3,-10.7 -6.3,-15.5ZM1087.3,1101.2c-10.1,-0.9 -18.6,1.3 -27.7,6.2 -42.8,23 -95,14.7 -129.5,-19.8 -34.2,-34.2 -42.2,-86.9 -19.6,-129.8 22.6,-42.8 70.7,-66.2 118.1,-57.6 47.6,8.7 83.8,47.3 89.7,95.8 0.8,6.2 2.1,12.9 0.8,18.7 -3.4,14.4 1,26.5 7.6,38.8 8.8,16.5 16.7,33.6 25.8,52 -22.9,-1.5 -44,-2.5 -65.2,-4.3Z"
+        android:strokeWidth="14">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="657.8"
+            android:startY="1000"
+            android:endX="1342.2"
+            android:endY="1000"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFDD03E"/>
+          <item android:offset="0.5" android:color="#FFF4403D"/>
+          <item android:offset="1" android:color="#FF3F45D7"/>
+        </gradient>
+      </aapt:attr>
+      <aapt:attr name="android:strokeColor">
+        <gradient 
+            android:startX="647.2"
+            android:startY="1000"
+            android:endX="1352.3"
+            android:endY="1000"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF629DDD"/>
+          <item android:offset="1" android:color="#FFA157D1"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="m1152.4,1105.5c-22.9,-1.5 -44,-2.5 -65.2,-4.3 -10.1,-0.9 -18.6,1.3 -27.7,6.2 -42.8,23 -95,14.7 -129.5,-19.8 -34.2,-34.2 -42.2,-86.9 -19.6,-129.8 22.6,-42.8 70.7,-66.2 118.1,-57.6 47.6,8.7 83.8,47.3 89.7,95.8 0.8,6.2 2.1,12.9 0.8,18.7 -3.4,14.4 1,26.5 7.6,38.8 8.8,16.5 16.7,33.6 25.8,52Z"
+        android:strokeWidth="14">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="897.7"
+            android:startY="1009.3"
+            android:endX="1152.4"
+            android:endY="1009.3"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFA157D1"/>
+          <item android:offset="1" android:color="#FF629DDD"/>
+        </gradient>
+      </aapt:attr>
+      <aapt:attr name="android:strokeColor">
+        <gradient 
+            android:startX="890.7"
+            android:startY="1009.3"
+            android:endX="1164"
+            android:endY="1009.3"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFDD03E"/>
+          <item android:offset="0.5" android:color="#FFF4403D"/>
+          <item android:offset="1" android:color="#FF3F45D7"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M964.6,1012.4m-15.7,0a15.7,15.7 0,1 1,31.4 0a15.7,15.7 0,1 1,-31.4 0"
+        android:strokeWidth="0">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="948.9"
+            android:startY="1012.4"
+            android:endX="980.3"
+            android:endY="1012.4"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFDD03E"/>
+          <item android:offset="0.5" android:color="#FFF4403D"/>
+          <item android:offset="1" android:color="#FF3F45D7"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M1004.9,1012.4m-15.7,0a15.7,15.7 0,1 1,31.4 0a15.7,15.7 0,1 1,-31.4 0"
+        android:strokeWidth="0">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="989.2"
+            android:startY="1012.4"
+            android:endX="1020.6"
+            android:endY="1012.4"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFDD03E"/>
+          <item android:offset="0.5" android:color="#FFF4403D"/>
+          <item android:offset="1" android:color="#FF3F45D7"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M1045.2,1012.4m-15.7,0a15.7,15.7 0,1 1,31.4 0a15.7,15.7 0,1 1,-31.4 0"
+        android:strokeWidth="0">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="1029.5"
+            android:startY="1012.4"
+            android:endX="1060.9"
+            android:endY="1012.4"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFDD03E"/>
+          <item android:offset="0.5" android:color="#FFF4403D"/>
+          <item android:offset="1" android:color="#FF3F45D7"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
