--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -3,18 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#232E2D"
-    android:gravity="center"
     android:orientation="vertical"
-    tools:context=".LoginFragment">
+    android:background="#11736B"
+    android:gravity="center"
+    tools:context=".SignInFragment">
 
-
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logo"/>
-
-
+    <EditText
+        android:id="@+id/userName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/et_background"
+        android:fontFamily="@font/adamina"
+        android:hint="Enter UserName"
+        android:inputType="text"
+        android:padding="10dp"
+        android:textAlignment="center" />
 
     <EditText
         android:id="@+id/emailEt"
@@ -49,26 +53,17 @@
         android:fontFamily="@font/adamina"
         android:background="@drawable/btn_bg"
         android:backgroundTint="#E5931A"
-        android:text="Login"
+        android:text="Sign In"
         android:textColor="@color/white"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/forgetTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Forgot Password"
-        android:fontFamily="@font/adamina"
-        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
-        android:textColor="@color/white"/>
 
     <TextView
-        android:id="@+id/createAccount"
+        android:id="@+id/haveAnAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Create New Account"
+        android:text="I have already an account"
         android:textStyle="bold"
         android:fontFamily="@font/adamina"
         android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
