--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,12 +53,14 @@
            app:layout_constraintEnd_toStartOf="@id/profileBtn"
             app:layout_constraintTop_toTopOf="@id/profileBtn"/>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profileBtn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:padding="5dp"
-            android:src="@drawable/baseline_info_24"
+            app:civ_border_color="@color/white"
+            app:civ_border_width="2dp"
+            android:src="@drawable/profile"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -71,9 +73,10 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/topBar"
-        tools:listitem="@layout/profile_item"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        tools:layout_editor_absoluteX="-16dp"
+        tools:listitem="@layout/profile_item" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
